language/tests/error/InvalidAssignmentInWhileCond.hashem
bebin double(x) {
  bede 2 * x;
}

bebin azinja() {
  ta (double(2) = 4) bood {
    42;
  }
}
